tests/externInfo/dhrystone-exported/db/invalid/path/Proc7.c.ttp
./db/invalid/path/Proc7.c : 66.22-66.30 : -- value at line 68, column 19 --# # IntParI1 ; signed int ; [2, 10] /\ != 0# 
./db/invalid/path/Proc7.c : 66.43-66.51 : -- value at line 68, column 19 --# # IntParI2 ; signed int ; [3, 10] /\ != 0# 
./db/invalid/path/Proc7.c : 66.65-66.74 : -- value at line 68, column 19 --# #                                    IntParOut ; pointer ; { IntLoc3, feld__ASTREE___db_invalid_path_malloc_x_c_283 } + [0, 60]# 
./db/invalid/path/Proc7.c : 73.8-73.14 : -- value at line 73, column 8 --# #                                   IntLoc ; signed int ; [-2147483648, 2147483647]#  #-- value at line 74, column 8 --# # IntLoc ; signed int ; [4, 12] /\ != 0# 
./db/invalid/path/Proc7.c : 73.17-73.25 : -- value at line 73, column 8 --# # IntParI1 ; signed int ; [2, 10] /\ != 0#  #-- value at line 74, column 8 --# #                                     IntParI1 ; signed int ; [2, 10] /\ != 0# 
./db/invalid/path/Proc7.c : 74.8-74.15 : -- value at line 74, column 8 --# #                                   counter ; signed int ; [491, 599] /\ != 0#  #-- value at line 75, column 8 --# #                                     counter ; signed int ; [495, 607] /\ != 0# 
./db/invalid/path/Proc7.c : 74.17-74.23 : -- value at line 74, column 8 --# # IntLoc ; signed int ; [4, 12] /\ != 0#  #-- value at line 75, column 8 --# # IntLoc ; signed int ; [4, 12] /\ != 0# 
./db/invalid/path/Proc7.c : 75.9-75.18 : -- value at line 75, column 8 --# #                                   IntParOut ; pointer ; { IntLoc3, feld__ASTREE___db_invalid_path_malloc_x_c_283 } + [0, 60]# 
./db/invalid/path/Proc7.c : 75.21-75.29 : -- value at line 75, column 8 --# # IntParI2 ; signed int ; [3, 10] /\ != 0# 
./db/invalid/path/Proc7.c : 75.32-75.38 : -- value at line 75, column 8 --# # IntLoc ; signed int ; [4, 12] /\ != 0# 
